<resources>
    <string name="app_name">ContactApplicationKotlin</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="loading_contacts">Loading Contacts…</string>
    <string name="sort_by_ascending">Sort By Ascending</string>
    <string name="sort_by_descending">Sort By Descending</string>
    <string name="contacts">Contacts</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search_by_number">Search By Number</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="not_available">Not Available</string>
    <string name="update">Update</string>
    <string name="contact_app">Contact App</string>
</resources>